chore: Reformat code