@@ -1,13 +1,36 @@
+/*
+ * The MIT License (MIT)
+ *
+ * Copyright 2021 Crown Copyright (Health Education England)
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
+ * associated documentation files (the "Software"), to deal in the Software without restriction,
+ * including without limitation the rights to use, copy, modify, merge, publish, distribute,
+ * sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all copies or
+ * substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
+ * NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+ * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ */
+
 package uk.nhs.hee.tis.revalidation.connection.service;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import org.apache.lucene.queryparser.classic.QueryParserBase;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class StringConverter {
+
   private static final Logger LOGGER = LoggerFactory.getLogger(StringConverter.class.getName());
   private String str;
 
@@ -29,11 +52,7 @@ public class StringConverter {
 
   public StringConverter encodeUrl() {
     if (this.str != null) {
-      try {
-        this.str = URLEncoder.encode(this.str, "UTF-8");
-      } catch (UnsupportedEncodingException var2) {
-        LOGGER.warn("Unable to URL encode string.", var2);
-      }
+      this.str = URLEncoder.encode(this.str, StandardCharsets.UTF_8);
     }
 
     return this;
@@ -42,9 +61,9 @@ public class StringConverter {
   public StringConverter decodeUrl() {
     if (this.str != null) {
       try {
-        this.str = URLDecoder.decode(this.str, "UTF-8");
+        this.str = URLDecoder.decode(this.str, StandardCharsets.UTF_8);
         this.filterInvisible();
-      } catch (IllegalArgumentException | UnsupportedEncodingException var2) {
+      } catch (IllegalArgumentException var2) {
         LOGGER.warn("Unable to URL decode string.", var2);
       }
     }
